Refactor: Entity arrangement and YouTube fix
- Rearranged entity structure
- Fixed YouTube API integration
- Removed hardcoded secrets
- Switched to environment variables
- Updated .gitignore

Youtube fix

Removed hardcoded secrets, switched to env variables

Remove secrets from application.properties and update .gitignore